force-app/main/default/objects/Customer_Insights__c/Customer_Insights__c.object-meta.xml
<CustomObject>
    <description>Customer sight notes for line card CRM functionally by retailer or brand</description>
    <label>Customer Insight</label>
    <nameField>
        <displayFormat>INS-{MM}-{YYYY}-{000}</displayFormat>
        <label>Customer Insights</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>