force-app/main/default/objects/Customer_Insights__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Insights</relationshipLabel>
    <relationshipName>Customer_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>