force-app/main/default/objects/Customer_Insights__c/fields/Insight_Type__c.field-meta.xml
<CustomField>
    <fullName>Insight_Type__c</fullName>
    <label>Insight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Preference</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>