force-app/main/default/objects/Customer_Insights__c/fields/Line_Card__c.field-meta.xml
<CustomField>
    <fullName>Line_Card__c</fullName>
    <label>Line Card</label>
    <referenceTo>Line_Card__c</referenceTo>
    <relationshipLabel>Customer Insights</relationshipLabel>
    <relationshipName>Customer_Insights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>